--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
   text-align: center;
    font-family: 'Merriweather Sans', sans-serif;
   color: Black;
+  width:100%;
 }
 
 .top{
@@ -14,11 +15,12 @@ body{
 {
   position: absolute;
   top: 60px;
-  left: 900px;
+  left: 500px;
 }
 .bottom-cloud
 {
   top: 250px;
+  right:100px;
   position: absolute;
 }
 
